# dpp-demonstrator

./: .copywrite.hcl  .env.example  .gitignore  LICENSE  README.md  config.yaml  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  lefthook.yml  makefile
backend/: .env.example  Cargo.toml  dockerfile
backend/docs/: API.md  README.md  SCRIPTS.md  SMART_CONTRACTS.md
backend/ith/ith.move/: Move.toml
backend/ith/ith.rs/: Cargo.toml
backend/ith/ith.rs/ith/src/: federation.rs
backend/ith/scripts/: package.json
backend/src/: main.rs
backend/src/config/: config.rs  mod.rs
backend/src/handlers/: mod.rs  permission_handler.rs
backend/src/lib/: identity.rs  identity_utils.rs  keystore.rs  lib.rs  transaction.rs  utils.rs
backend/src/routes/: mod.rs  roles.rs
backend/src/scripts/: faucet.rs  identity.rs  import_accounts.rs  init_accounts.rs  init_dids.rs  init_hierarchies.rs  init_ith.rs  verify_dids.rs
backend/src/services/: blockchain.rs  mod.rs
contract/: Move.toml
contract/sources/: audit_trails.move  custom_notarization.move  iota_reward.move  lcc.move  lcc_reward.move  nft_reward.move  rewards.move  rwr.move  rwr_reward.move
frontend/: .env.example  .prettierignore  README.md  cspell.config.yaml  dockerfile  eslint.config.mjs  i18next.config.ts  next.config.ts  package-lock.json  package.json  prettier.config.js  prettier.config.mjs
frontend-legacy-demonstrator/: .gitignore  dockerfile  package-lock.json  package.json  tailwind.config.js
frontend-legacy-demonstrator/public/.well-known/: did-configuration.json
frontend-legacy-demonstrator/src/components/: DppDetails.tsx  ErrorComponent.tsx  Loading.tsx  RolesRequestPopup.tsx
frontend-legacy-demonstrator/src/components/atoms/: DomainLinkageStatus.tsx
frontend-legacy-demonstrator/src/components/layout/: index.tsx
frontend-legacy-demonstrator/src/helpers/: fromDidToExplorerLink.ts  roleToEntryType.ts
frontend-legacy-demonstrator/src/lib/: transactions.ts
frontend-legacy-demonstrator/src/locales/: en.ts
frontend-legacy-demonstrator/src/pages/: admin.tsx  dynamic_redirect.tsx
frontend-legacy-demonstrator/src/pages/api/: roles.ts  send-tx.ts  verify-domain-linkage.ts
frontend-legacy-demonstrator/src/styles/: Dpp.module.css  DppDetails.module.css  DppUpdatePopup.module.css  RoleRequestPopup.module.css
frontend/public/.well-known/: did-configuration.dev.json  did-configuration.json  did-configuration.prod.json
frontend/public/backend/: federation-output.json5  product-output.json5  reward-vault-output.json5  service-history-output.json5
frontend/public/introSlides/: index-1.html  index-10.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html
frontend/public/locales/: en.json
frontend/public/modals/: pointer.html  save-diagnostic.html  service-request.html
frontend/public/tutorial/: diagnostic-loading.html  diagnostic-request.html  index-explore-freely.html  index-guided-exploration.html  post-experience-1.html  post-experience-2.html  post-experience-3.html  post-experience-4.html  product-header.html  request-service-network-access.html
frontend/src/: i18n.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/explore-freely/: layout.tsx  page.tsx
frontend/src/app/explore-guided/: page.tsx
frontend/src/app/guided-explore/: layout.tsx  page.tsx
frontend/src/app/introduction/: layout.tsx  page.tsx  (+1 more)
frontend/src/components/: ActionButtons.tsx  AppLayout.tsx  BackgroundVideo.tsx  BadgeWithLink.tsx  CardHeader.tsx  CheckmarkList.tsx  ClientCard.tsx  CollapsableInnerSection.tsx  CollapsibleSection.tsx  ConnectWallet.tsx  Contact.tsx  ContactSection.tsx  DataGrid.tsx  DiagnosticCard.tsx  Dialog.tsx  DppDetails.tsx  DppHistory.tsx  DppUpdatePopup.tsx  EndOfPassportMessage.tsx  Enumeration.tsx  ExploreFreely.tsx  ExploreGuided.tsx  FeatureCard.tsx  FeaturesGrid.tsx  GridContainer.tsx  GuidedExploration.tsx  GuidedSidebar.tsx  Header.tsx  HeaderContent.tsx  ImageTextLayout.tsx  IntroSlide.tsx  IntroSlide1.tsx  IntroSlide10.tsx  IntroSlide11.tsx  IntroSlide12.tsx  IntroSlide2.tsx  IntroSlide3.tsx  IntroSlide4.tsx  IntroSlide5.tsx  IntroSlide6.tsx  (+74 more)
frontend/src/contents/: common.ts  explore.ts  introduction.ts  notification.ts  recap.ts
frontend/src/helpers/: api.ts  copyToClipboard.ts  domainLinkageConfiguration.ts  federation.ts  fromPosixMsToUtcString.ts  move-decoder.ts  product.ts  rewardVault.ts  rewardVaultTransactions.ts  serviceHistory.ts  transaction.ts  truncateAddress.ts  truncateDid.ts  verifyDomainLinkage.ts
frontend/src/hooks/: useAllowWalletAutoConnect.ts  useCheckLinkage.ts  useCopyToClipboard.ts  useFederationDetails.ts  useFederationTransactions.ts  useGetFirstDomainLinkageService.ts  useIntroSlideNavigation.ts  usePortalTarget.ts  useProductDetails.ts  useProgress.ts  useRewardTotalSupply.ts  useRewardTransactions.ts  useRewardVault.ts  useServiceHistory.ts  useSlideNavigation.ts  useTransitionTrigger.ts  useTutorialNavigation.ts  useWalletUpdateEffects.ts
frontend/src/lib/: dppHistory.ts  federation.ts  product.ts  transactions.ts  whitelist.ts
frontend/src/locales/: en.ts
frontend/src/pages/: _app.tsx  admin.tsx  dynamic_redirect.tsx  index.tsx  manufacturer.tsx  redirect.tsx  roles.tsx
frontend/src/providers/: appProvider.tsx
frontend/src/stories/: Button.stories.ts  Button.tsx  CheckmarkList.stories.ts  Configure.mdx  ContactSection.stories.ts  FeatureCard.stories.ts  Header.stories.ts  Header.tsx  Page.stories.ts  Page.tsx  ProductHeaderCard.stories.ts  ServiceRequestCard.stories.ts  button.css  header.css  page.css
frontend/src/styles/: Admin.module.css  Dpp.module.css  DppHistory.module.css  Layout.module.css  globalStyles.ts  globals.css  theme.ts
frontend/src/types/: api.ts  common.ts  identity.ts  product.ts  reward.ts  transaction.ts
frontend/src/utils/: common.ts  constants.ts
scripts-sh/: dev-start.sh  dev-stop.sh  mint-lcc.sh  new-product.sh  new_product.sh  top-up-reward-pool.sh
(+57 files in other folders)
